--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -51,9 +51,10 @@ body #root {
 
 /* Ipod Stylin  */
 .ipod {
+	border: 1px solid rgba(128, 128, 128, 0.524);
 	height: 580px;
 	width: 370px;
-	background: linear-gradient(90deg, #e3e4e5, #cacaca);
+	background: linear-gradient(90deg, #97b8d9, #cacaca);
 	border-radius: 10%;
 	margin: auto;
 	margin-top: 40px;
@@ -66,7 +67,7 @@ body #root {
 /* Ipod Top Container Stylin  */
 /* Top Container */
 .ipod .top-container {
-	background: linear-gradient(90deg, #e3e4e5, #cacaca);
+	background: linear-gradient(90deg, #97b8d9, #cacaca);
 	border-radius: 10%;
 	height: 50%;
 	width: 100%;
@@ -81,7 +82,7 @@ body #root {
 /* Display Container */
 .ipod .display-container {
 	border-radius: 10%;
-	background: linear-gradient(90deg, #e3e4e5, #cacaca);
+	background: linear-gradient(90deg, #97b8d9, #cacaca);
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -95,7 +96,7 @@ body #root {
 	z-index: 2;
 	border-top-left-radius: 10%;
 	border-top-right-radius: 10%;
-	background: linear-gradient(45deg, #e3e4e5, #cacaca);
+	background: linear-gradient(90deg, #97b8d9, #cacaca);
 	height: 100%;
 	width: 100%;
 	position: relative;
@@ -164,7 +165,7 @@ body #root {
 }
 /* Controller */
 .ipod .controller-container .controller {
-	background: linear-gradient(45deg, #cacaca, gray);
+	background: linear-gradient(200deg, #c3c2c2, gray);
 	border-radius: 50%;
 	display: flex;
 	flex-direction: column;
@@ -174,7 +175,7 @@ body #root {
 }
 /* Enter Button */
 .ipod .controller-container .controller .inner-circle {
-	background: linear-gradient(200deg, #cacaca, gray);
+	background: linear-gradient(200deg, #c3c2c2, gray);
 	border-radius: 50%;
 	display: flex;
 	flex-direction: column;
